[package]
name = "fsae-daq"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-socketcan-isotp = "0.2.0"
tracing-subscriber = "0.3"
config = "0.15"
rumqttc = "0.25"
rumqttd = "0.20"
tracing = "0.1.44"
deku = "0.20.3"
taos = { version = "0.12.3", features = ["ws"] }
serde_repr = "0.1.20"
itoa = "1.0.17"
ryu = "1.0.23"

[dev-dependencies]
reqwest = "0.13.2"

[features]
synthetic = []

[profile.release]
debug = 1
